Ajout du Chart Helm pour le déploiement Kubernetes

--- a/k8s/deployment-app.yaml
+++ b/k8s/deployment-app.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: olympic-games-app
-        # TODO: add the image of the application from the gitlab registry
+        image: nginx:latest
         ports:
         - containerPort: 80
-      # TODO: define imagePullSecrets to use a docker-registry secret and authorize Kubenetes 
+      imagePullSecrets:
+      - name: gitlab-registry-secret
